Compiled. Blackjack controller complete. Untested.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,21 @@ blackJackController/db/blackJackController.db_info
 *.hdb
 *.rdb
 *.summary
+*.tdf
+*.cdb
+*.xml
+*.rdb
+*.hier_info
+*.hif
+*.html
+*.txt
+*.qmsg
+*.rdb
+*.hdb
+*.logdb
+*.sci
+blackJackController/incremental_db/README
+*.tmp
+*.qmsg
+*.summary
+*.smsg
