Testbench working, Quartus is fully compiling!!

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,21 @@ blackJackController/ModelSim/work/_info
 *.qpg
 *.qtl
 blackJackController/ModelSim/work/_vmake
+*.jdi
+*.pin
+*.done
+*.sof
+*.sld
+*.idb
+*.kpt
+*.bpm
+*.hsd
+*.dfp
+*.sig
+*.rcfdb
+*.dpi
+*.hb_info
+*.json
+*.tmw_info
+*.tdb
+*.ammdb
