--- a/blackJackController/blackJackController.qsf
+++ b/blackJackController/blackJackController.qsf
@@ -38,7 +38,7 @@
 
 
 set_global_assignment -name FAMILY "Cyclone V"
-set_global_assignment -name DEVICE 5CGXFC7C7F23C8
+set_global_assignment -name DEVICE 5CSEMA5F31C6
 set_global_assignment -name TOP_LEVEL_ENTITY blackJackController
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "10:25:33  DECEMBER 04, 2023"
@@ -53,4 +53,9 @@ set_global_assignment -name VERILOG_FILE ModelSim/testbench.v
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_location_assignment PIN_AA14 -to hit
+set_location_assignment PIN_AA15 -to deal
+set_location_assignment PIN_AF14 -to clk
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_location_assignment PIN_AB12 -to rst
+set_location_assignment PIN_W15 -to stand
