--- a/blackJackController/blackJackController.qsf
+++ b/blackJackController/blackJackController.qsf
@@ -53,9 +53,56 @@ set_global_assignment -name VERILOG_FILE ModelSim/testbench.v
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_location_assignment PIN_AA14 -to hit
-set_location_assignment PIN_AA15 -to deal
+set_location_assignment PIN_AA15 -to hit
+set_location_assignment PIN_Y16 -to deal
 set_location_assignment PIN_AF14 -to clk
-set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_location_assignment PIN_AB12 -to rst
-set_location_assignment PIN_W15 -to stand
+set_location_assignment PIN_AA14 -to stand
+set_location_assignment PIN_V25 -to seg[41]
+set_location_assignment PIN_AA28 -to seg[40]
+set_location_assignment PIN_Y27 -to seg[39]
+set_location_assignment PIN_AB27 -to seg[38]
+set_location_assignment PIN_AB26 -to seg[37]
+set_location_assignment PIN_AA26 -to seg[36]
+set_location_assignment PIN_AA25 -to seg[35]
+set_location_assignment PIN_AA24 -to seg[34]
+set_location_assignment PIN_Y23 -to seg[33]
+set_location_assignment PIN_Y24 -to seg[32]
+set_location_assignment PIN_W22 -to seg[31]
+set_location_assignment PIN_W24 -to seg[30]
+set_location_assignment PIN_V23 -to seg[29]
+set_location_assignment PIN_W25 -to seg[28]
+set_location_assignment PIN_AD26 -to seg[27]
+set_location_assignment PIN_AC27 -to seg[26]
+set_location_assignment PIN_AD25 -to seg[25]
+set_location_assignment PIN_AC25 -to seg[24]
+set_location_assignment PIN_AB28 -to seg[23]
+set_location_assignment PIN_AB25 -to seg[22]
+set_location_assignment PIN_AB22 -to seg[21]
+set_location_assignment PIN_AB23 -to seg[20]
+set_location_assignment PIN_AE29 -to seg[19]
+set_location_assignment PIN_AD29 -to seg[18]
+set_location_assignment PIN_AC28 -to seg[17]
+set_location_assignment PIN_AD30 -to seg[16]
+set_location_assignment PIN_AC29 -to seg[15]
+set_location_assignment PIN_AC30 -to seg[14]
+set_location_assignment PIN_AJ29 -to seg[13]
+set_location_assignment PIN_AH29 -to seg[12]
+set_location_assignment PIN_AH30 -to seg[11]
+set_location_assignment PIN_AG30 -to seg[10]
+set_location_assignment PIN_AF29 -to seg[9]
+set_location_assignment PIN_AF30 -to seg[8]
+set_location_assignment PIN_AD27 -to seg[7]
+set_location_assignment PIN_AE26 -to seg[6]
+set_location_assignment PIN_AE27 -to seg[5]
+set_location_assignment PIN_AE28 -to seg[4]
+set_location_assignment PIN_AG27 -to seg[3]
+set_location_assignment PIN_AF28 -to seg[2]
+set_location_assignment PIN_AG28 -to seg[1]
+set_location_assignment PIN_AH28 -to seg[0]
+set_global_assignment -name VERILOG_FILE microSeconds.v
+set_global_assignment -name VERILOG_FILE display.v
+set_global_assignment -name VERILOG_FILE bcdTo7Seg.v
+set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
+set_global_assignment -name NUM_PARALLEL_PROCESSORS ALL
+set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
