--- a/shuffle_tb/shuffle.qsf
+++ b/shuffle_tb/shuffle.qsf
@@ -45,3 +45,5 @@ set_global_assignment -name PROJECT_CREATION_TIME_DATE "16:44:19  DECEMBER 06, 2
 set_global_assignment -name LAST_QUARTUS_VERSION "20.1.0 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 256
+set_global_assignment -name VERILOG_FILE shuffle.v
+set_global_assignment -name VERILOG_FILE ModelSim/testbench.v
