--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,14 @@ shuffle_tb/ModelSim/work/_vmake
 *.qpg
 *.dtmp
 *.bkp
+microSeconds_tb/simulation/modelsim/microSeconds_run_msim_rtl_verilog.do
+microSeconds_tb/simulation/modelsim/modelsim.ini
+microSeconds_tb/simulation/modelsim/msim_transcript
+microSeconds_tb/simulation/modelsim/rtl_work/_info
+microSeconds_tb/simulation/modelsim/rtl_work/_vmake
+microSeconds_tb/ModelSim/work/_info
+microSeconds_tb/ModelSim/work/_vmake
+microSeconds_tb/incremental_db/README
+display_tb/ModelSim/work/_vmake
+display_tb/ModelSim/work/_info
+display_tb/incremental_db/README
